[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "1.0.72", features = ["full"] }
quote = "1.0.23"
serde_json = "1.0"
serde = { version = "~1.0", features = ["derive"] }